# Monolith

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Monolith.sln  README.md  build.bat  build.sh  build_msvc.bat  build_test.bat  run_tests.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
Monolith/: Monolith.vcxproj  Monolith.vcxproj.filters
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-cmake-vcpkg-presets-setup.md  1-2-clang-format-clang-tidy-editorconfig.md  1-3-core-types-assert-result.md  1-4-logging-via-spdlog.md  1-5-math-types-and-coordinate-utilities.md  1-6-ci-pipeline-github-actions.md  2-1-glfw-window-game-loop-skeleton.md  2-2-vulkan-initialization-volk-vk-bootstrap-vma.md  2-3-test-triangle-dynamic-rendering.md  3-4-block-state-system.md  (+57 more)
cmake/: CompileShaders.cmake  CompilerWarnings.cmake  Sanitizers.cmake
docs/: research.md
engine/: CMakeLists.txt
engine/include/voxel/core/: Assert.h  ConcurrentQueue.h  ConfigManager.h  JobSystem.h  Log.h  Result.h  Types.h
engine/include/voxel/game/: CommandQueue.h  EventBus.h  GameCommand.h  GameLoop.h  MiningState.h  PlayerController.h  Window.h
engine/include/voxel/input/: InputManager.h
engine/include/voxel/math/: AABB.h  CoordUtils.h  MathTypes.h  Ray.h
engine/include/voxel/physics/: Raycast.h
engine/include/voxel/renderer/: AmbientOcclusion.h  Camera.h  ChunkMesh.h  ChunkRenderInfo.h  ChunkRenderInfoBuffer.h  ChunkUploadManager.h  DescriptorAllocator.h  GBuffer.h  Gigabuffer.h  ImGuiBackend.h  IndirectDrawBuffer.h  MeshBuilder.h  MeshJobTypes.h  ModelIndirectDrawBuffer.h  ModelMesher.h  ModelRegistry.h  ParticleManager.h  QuadIndexBuffer.h  Renderer.h  RendererConstants.h  StagingBuffer.h  TextureArray.h  TintPalette.h  VulkanContext.h  WieldMeshRenderer.h
engine/include/voxel/scripting/: ABMRegistry.h  BlockCallbackInvoker.h  BlockCallbacks.h  BlockTimerManager.h  ComboDetector.h  EntityHandle.h  GlobalEventRegistry.h  InputEventTracker.h  LBMRegistry.h  LuaBindings.h  NeighborNotifier.h  ScriptEngine.h  ShapeCache.h  WorldQueryAPI.h
engine/include/voxel/world/: BiomeSystem.h  BiomeTypes.h  Block.h  BlockInventory.h  BlockLightPropagator.h  BlockMetadata.h  BlockRegistry.h  CaveCarver.h  ChunkColumn.h  ChunkManager.h  ChunkSection.h  ChunkSerializer.h  DynamicLightUpdater.h  ItemStack.h  LightMap.h  PaletteCompression.h  RegionFile.h  SkyLightPropagator.h  SplineCurve.h  StructureGenerator.h  WorldGenerator.h
engine/src/: Placeholder.cpp
engine/src/core/: ConfigManager.cpp  CoreModule.cpp  JobSystem.cpp  Log.cpp
engine/src/game/: EventBus.cpp  GameLoop.cpp  PlayerController.cpp  Window.cpp
engine/src/input/: InputManager.cpp
engine/src/physics/: Raycast.cpp
engine/src/renderer/: Camera.cpp  ChunkRenderInfoBuffer.cpp  ChunkUploadManager.cpp  DescriptorAllocator.cpp  GBuffer.cpp  Gigabuffer.cpp  ImGuiBackend.cpp  ImGuiImpl.cpp  ImGuiImplGlfw.cpp  IndirectDrawBuffer.cpp  MeshBuilder.cpp  ModelIndirectDrawBuffer.cpp  ModelMesher.cpp  ModelRegistry.cpp  ParticleManager.cpp  QuadIndexBuffer.cpp  Renderer.cpp  StagingBuffer.cpp  StbImageImpl.cpp  StbImageWriteImpl.cpp  TextureArray.cpp  TintPalette.cpp  VmaImpl.cpp  VulkanContext.cpp
engine/src/scripting/: ABMRegistry.cpp  BlockCallbackInvoker.cpp  BlockTimerManager.cpp  ComboDetector.cpp  EntityHandle.cpp  GlobalEventRegistry.cpp  InputEventTracker.cpp  LBMRegistry.cpp  LuaBindings.cpp  NeighborNotifier.cpp  ScriptEngine.cpp  ShapeCache.cpp  WorldQueryAPI.cpp
engine/src/world/: BinaryIO.h  BiomeSystem.cpp  Block.cpp  BlockInventory.cpp  BlockLightPropagator.cpp  BlockMetadata.cpp  BlockRegistry.cpp  CaveCarver.cpp  ChunkColumn.cpp  ChunkManager.cpp  ChunkSection.cpp  ChunkSerializer.cpp  DynamicLightUpdater.cpp  ItemStack.cpp  PaletteCompression.cpp  RegionFile.cpp  SkyLightPropagator.cpp  SplineCurve.cpp  StructureGenerator.cpp  WorldGenerator.cpp
game/: CMakeLists.txt
tests/: CMakeLists.txt  TestPlaceholder.cpp
tests/core/: TestConcurrentQueue.cpp  TestJobSystem.cpp  TestLog.cpp  TestResult.cpp
tests/game/: TestBlockPlacement.cpp  TestCommandQueue.cpp  TestEventBus.cpp  TestMiningState.cpp  TestPlayerController.cpp
tests/math/: TestAABB.cpp  TestCoordUtils.cpp
tests/physics/: TestRaycast.cpp
tests/renderer/: TestAmbientOcclusion.cpp  TestAsyncMeshing.cpp  TestCamera.cpp  TestChunkUpload.cpp  TestGigabuffer.cpp  TestGreedyMeshing.cpp  TestMeshBuilder.cpp  TestMeshingLight.cpp  TestNonCubicMeshing.cpp  TestQuadIndexBuffer.cpp  TestStagingBuffer.cpp  TestTintWaving.cpp
tests/scripting/: TestBlockInteraction.cpp  TestBlockMetadata.cpp  TestBlockTimers.cpp  TestEntityBlockCallbacks.cpp  TestGlobalEventHooks.cpp  TestLuaBindings.cpp  TestMetadataInventoryCallbacks.cpp  TestNeighborShape.cpp  TestScriptEngine.cpp  TestVisualCallbacks.cpp  TestWorldQueryAPI.cpp
tests/scripting/test_scripts/: abm_grass_spread.lua  entity_collide.lua  entity_fall_on.lua  entity_inside.lua  entity_projectile_stub.lua  entity_step_on.lua  global_events_block.lua  global_events_cancel.lua  global_events_input.lua  interaction_priority.lua  interaction_punch.lua  interaction_rightclick.lua  interaction_secondary_use.lua  interaction_sustained.lua  inventory_chest.lua  inventory_deny.lua  inventory_notify.lua  lbm_upgrade_torch.lua  metadata_basic.lua  register_block.lua  register_block_can_dig_false.lua  register_block_can_place_false.lua  register_block_with_callbacks.lua  set_global.lua  syntax_error.lua  timer_furnace.lua  visual_animate_tick.lua  visual_get_color.lua  visual_pick_block.lua  world_query_test.lua
tests/world/: TestBiomeSystem.cpp  TestBlockLightPropagator.cpp  TestBlockRegistry.cpp  TestCaveCarver.cpp  TestChunkColumn.cpp  TestChunkManager.cpp  TestChunkSection.cpp  TestChunkSerializer.cpp  TestDynamicLightUpdater.cpp  TestLightMap.cpp  TestPaletteCompression.cpp  TestSkyLightPropagator.cpp  TestSplineCurve.cpp  TestStructureGenerator.cpp  TestWorldGenerator.cpp
tools/: check-format.sh  setup-msvc-env.sh  shader_compile.sh
(+56 files in other folders)
